--- a/app/accountRegister/page.module.css
+++ b/app/accountRegister/page.module.css
@@ -19,7 +19,7 @@
   border: 2px solid #ccc;
   border-radius: 4px;
   height: 48px;
-  width: 520px;
+  width: 90%;
   padding-left: 8px;
   margin-bottom: 48px;
   font-size: 18px;
