--- a/components/Balance.module.css
+++ b/components/Balance.module.css
@@ -16,3 +16,10 @@
   font-size: 20px;
   font-weight: 400;
 }
+
+.p {
+  color: #929292;
+  font-size: 24px;
+  font-weight: 400;
+  padding: 12px;
+}
