--- a/app/accountCharge/page.module.css
+++ b/app/accountCharge/page.module.css
@@ -83,6 +83,10 @@
   padding: 6px 12px;
 }
 
+.accountNumber:hover {
+  background-color: #d8d8d8;
+}
+
 .accountNumber:not(:last-of-type) {
   border-bottom: 2px solid #ccc;
 }
