--- a/app/manageAccount/page.module.css
+++ b/app/manageAccount/page.module.css
@@ -1,8 +1,13 @@
+.h2 {
+  margin-top: 24px;
+}
+
 .wrapper {
   display: flex;
   position: relative;
   width: 100vw;
   height: 100vh;
+
   flex-direction: column;
   align-items: center;
 }
@@ -26,4 +31,46 @@
 .accountNumber:hover {
   background-color: #d9d9d9;
   cursor: pointer;
+}
+
+.buttonContainer {
+  display: flex;
+  gap: 12px;
+  margin-top: 24px;
+}
+
+.modalBackground {
+  position: fixed;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 998;
+  width: 100vw;
+  height: 100vh;
+  background-color: #31282828;
+}
+
+.modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  width: 480px;
+  height: 270px;
+  padding: 16px;
+  background-color: #fff;
+  border-radius: 8px;
+  color: #636363;
+  animation: slide-down 0.4s ease forwards;
+}
+
+@keyframes slide-down {
+  0% {
+    opacity: 0;
+    transform: translateY(-30px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
